--- a/evaluation/jupyter_notebooks/test_own_images.ipynb
+++ b/evaluation/jupyter_notebooks/test_own_images.ipynb
@@ -241,9 +241,9 @@
    "title": "Updated Model Pose and Expression Qualitative Results"
   },
   "kernelspec": {
-   "display_name": "test",
+   "display_name": "face3d",
    "language": "python",
-   "name": "test"
+   "name": "face3d"
   },
   "language_info": {
    "codemirror_mode": {
@@ -255,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.6.12"
   },
   "notify_time": "30"
  },
